# scora-er_14

./: README.md
rqt_scora/: package.xml  plugin.xml  setup.py
rqt_scora/resource/: RqtScora.ui  RqtScora_detalles.ui  VacuumGripper.ui  resources.qrc
rqt_scora/scripts/: read  rqt_scora  write.ino
rqt_scora/src/rqt_scora/: scora_gui.py
scora_ind/: package.xml  setup.cfg  setup.py
scora_ind/config/: joint_trajectory_p_controller.yaml
scora_ind/launch/: 1_rviz.launch.py  2_gazebo.launch.py  3_gazebo_controller.launch.py
scora_ind/meshes/: Light_alarm.STL  base_link.STL  gripper_left.STL  gripper_right.STL  link2_bottom.STL  link2_top.STL  link_1.STL  link_2.STL  link_2_bottom.STL  link_2_top.STL  link_3.STL  link_4.STL  link_5.STL  link_top.STL
scora_ind/rviz/: config.rviz
scora_ind/scora_ind/: suscriptor.py  teleop_key.py  trajectory_forward.py
scora_ind/urdf/: scora.urdf  scora_Joint_trajectory_controller.urdf  scora_gazebo.urdf
scora_ind/worlds/celda_manufactura/: celdamanufactura.world
