<package format="3">
  <name>rqt_scora</name>
  <version>1.0.0</version>
  <description>rqt_scora provides a GUI plugin for the control of the robotic arm scora-er 14.</description>
  <maintainer email="semurcdc@gmail.com">Sebastian Muñoz</maintainer>

  <license>BSD</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
